1.9.0 (trunk):
* Colon (":") is no longer percent-encoded in path segments
* URNs are now supported
* Relative paths with colons in first segment have "./" prepended in to_string

1.8.0 (2015-02-16):
* `Uri.with_port` no longer sets the host fragment to a blank value if both
   the host and port are empty (#63).
* `Uri.compare` imposes an ordering by host, scheme, port, userinfo, path,
  query, and finally fragment. (#55).
* Uri is now an `OrderedType` and can be used directly in Maps and Sets (#55).
* Remove deprecation warnings with OCaml 4.02.0+ (#58).
* Drop support for OCaml 3.12.1, and now require OCaml 4.00.1+.
* Modernise Travis scripts to use OPAM 1.2 workflow.

1.7.2 (2014-08-10):
* Fix empty-but-existing query ("?") parsing bug
* Fix `with_userinfo` against hostless URI representation bug
* Fix `with_port` against hostless URI representation bug
* Fix `with_path` with relative path against hosted URI representation bug (#51)
* Fix `make` without host but with userinfo or port representation bug
* Fix `make` with host, userinfo, or port and relative path representation bug

1.7.1 (2014-07-05):
* Add RFC6874 compliance for IPv6 literals with zones (#48).

1.7.0 (2014-06-16):
* Expose the list of known services in the `Uri_services` module via
  new functions that list TCP, UDP and an association list of both.

1.6.0 (2014-04-28):
* Remove `Uri_IP` module, superseded by the `ipaddr` package (#30).
* Do not depend on `camlp4` for link-time, only compile time (#39).
* Add `with_scheme` and `with_userinfo` functional setters (#40).
* Always percent-escape semicolon in structured query encoding (#44).

1.5.0 (2014-03-24):
* Make library POSIX thread-safe by removing dependency on `Re_str`.
* Add Merlin IDE configuration.

1.4.0 (2014-02-16):
* Fix path and path_and_query encoding bugs (#35).
* Fix userinfo percent-encoding/delimiter bug (#35).
* Add optional scheme parameter to encoding_of_query.

1.3.13 (2014-01-16):
* Remove internal use of Scanf.