@@ -2,6 +2,7 @@
 * Colon (":") is no longer percent-encoded in path segments
 * URNs are now supported
 * Relative paths with colons in first segment have "./" prepended in to_string
+* Add Uri.empty, the zero length URI reference
 
 1.8.0 (2015-02-16):
 * `Uri.with_port` no longer sets the host fragment to a blank value if both
